<resources>
    <string name="app_name">Yard Sale</string>
    <string name="item_title">Title</string>
    <string name="item_description">Description</string>
    <string name="item_price">Price</string>
    <string name="item_done_btn">Done</string>
    <string name="setting_language">Language</string>
    <string name="setting_edit_profile">Edit profile</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="categories">Categories</string>
    <string name="choose_category">Choose Category…</string>
    <string name="account">Don\'t have an account?</string>
    <string name="_100m">100m</string>
    <string name="_3km">3km</string>
    <string name="_5km">5km</string>
    <string name="vehicles">Vehicles</string>
    <string name="electronic">Electronic</string>
    <string name="furniture">Furniture</string>
    <string name="clothes">Clothes</string>
    <string name="real_estate">Real estate</string>
    <string name="log_out">Log out</string>
    <string name="update_name">Name</string>
    <string name="eng">Eng</string>
    <string name="ar">Ar</string>
    <string name="notification">notification</string>
    <string name="notification_channel_name">weekly notification</string>
    <string name="new_notification">Let\'s see the new sales 😍 </string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="yes_tv">Yes</string>
    <string name="no_tv">No</string>
    <string name="save_btn">Save</string>
    <string name="bio">Bio</string>
    <string name="name">Name</string>
    <string name="buy_btn">buy</string>
    <string name="add_item_title">Can\'t add post without title</string>
    <string name="add_description">Can\'t add post without description</string>
    <string name="add_post_price">can\'t add post without price</string>
    <string name="add_post_category">Can\'t add post without choose category</string>
    <string name="add_post_photos">Can\'t add post without photo</string>
    <string name="enter_username">enter username</string>
    <string name="enter_email">please enter email</string>
    <string name="enter_password">please enter password</string>
    <string name="passwor_mismatch">passwords must be matched</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_length">Password length should be between 7-15 letters</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="delete_post">Delete post?</string>


    <string-array name="categories">
        <item>Electronic</item>
        <item>Furniture</item>
        <item>Vehicles</item>
        <item>Clothes</item>
        <item>Real estate</item>
    </string-array>



</resources>