<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.chip.Chip
            android:id="@+id/cars"
            android:layout_width="90sp"
            android:layout_height="60sp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="17dp"
            android:backgroundTint="@color/green"
            android:clickable="true"
            android:elevation="10sp"
            android:focusable="true"
            android:gravity="center"
            android:shadowRadius="10"
            android:text="@string/vehicles"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@+id/realestate"
            app:layout_constraintStart_toEndOf="@+id/clothes"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.Chip
            android:id="@+id/electronic"
            android:layout_width="90sp"
            android:layout_height="60sp"
            android:layout_marginTop="132dp"
            android:layout_marginEnd="100dp"
            android:backgroundTint="@color/green"
            android:clickable="true"
            android:elevation="10sp"
            android:focusable="true"
            android:shadowRadius="10"
            android:text="@string/electronic"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.Chip
            android:id="@+id/furniture"
            android:layout_width="90sp"
            android:layout_height="60sp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="132dp"
            android:backgroundTint="@color/green"
            android:clickable="true"
            android:elevation="10sp"
            android:focusable="true"
            android:shadowRadius="10"
            android:text="@string/furniture"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.Chip
            android:id="@+id/clothes"
            android:layout_width="90sp"
            android:layout_height="60sp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="45dp"
            android:backgroundTint="@color/green"
            android:clickable="true"
            android:elevation="10sp"
            android:focusable="true"
            android:shadowRadius="10"
            android:text="@string/clothes"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.Chip
            android:id="@+id/realestate"
            android:layout_width="90sp"
            android:layout_height="60sp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="36dp"
            android:backgroundTint="@color/green"
            android:clickable="true"
            android:elevation="10sp"
            android:focusable="true"
            android:fontFamily="sans-serif-black"
            android:shadowRadius="10"
            android:text="@string/real_estate"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.Chip
            android:id="@+id/three_km"
            android:layout_width="90sp"
            android:layout_height="50sp"
            android:backgroundTint="@color/green"
            android:clickable="true"
            android:elevation="10sp"
            android:focusable="true"
            android:fontFamily="sans-serif-black"
            android:shadowRadius="10"
            android:text="@string/_3km"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:visibility="invisible"
            tools:layout_editor_absoluteX="108dp"
            tools:layout_editor_absoluteY="451dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/five_km"
            android:layout_width="90sp"
            android:layout_height="50sp"
            android:backgroundTint="@color/green"
            android:clickable="true"
            android:elevation="10sp"
            android:focusable="true"
            android:fontFamily="sans-serif-black"
            android:shadowRadius="10"
            android:text="@string/_5km"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:visibility="invisible"
            tools:layout_editor_absoluteX="239dp"
            tools:layout_editor_absoluteY="451dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>