<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="124dp"
            android:text="@string/sign_in"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signin_email_til"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/signin_password_til"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.558"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.897"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/singin_email_et"
                android:layout_width="300sp"
                android:layout_height="match_parent"
                android:background="@drawable/custom_edit_text"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="12sp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailSubject"
                android:minHeight="48dp"
                android:paddingStart="12sp"
                android:paddingEnd="12sp"
                tools:ignore="SpeakableTextPresentCheck" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signin_password_til"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.557"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/singin_password_et"
                android:layout_width="300sp"
                android:layout_height="match_parent"
                android:background="@drawable/custom_edit_text"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="12sp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:paddingStart="12sp"
                android:paddingEnd="12sp"
                tools:ignore="SpeakableTextPresentCheck" />


        </com.google.android.material.textfield.TextInputLayout>





        <TextView
            android:id="@+id/resend_password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/forgot_password"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/signin_password_til"
            app:layout_constraintTop_toBottomOf="@+id/signin_password_til" />

        <Button
            android:id="@+id/singin_btn"
            android:layout_width="300sp"
            android:layout_height="48dp"
            android:layout_marginBottom="192dp"
            android:background="@drawable/custom_button"
            android:elevation="10sp"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/to_register_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/singin_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>